--- a/nw/srv/client-conf/client.dir.conf
+++ b/nw/srv/client-conf/client.dir.conf
@@ -1,6 +1,6 @@
 Client {
   Name = db-bak
-  Address = 192.168.0.130
+  Address = 192.168.241.130
   FDPort = 9102
   Catalog = MyCatalog
   Password = "P@ssw0rd"
@@ -12,7 +12,7 @@ Client {
 Storage {
   Name = db-bak
    Password = "P@ssw0rd"
-  Address = 192.168.0.242
+  Address = 192.168.241.131
   SDPort = 9103
   Device = db-bak
   Media Type = File
@@ -43,7 +43,7 @@ FileSet {
       compression = GZIP
       signature = MD5 
     }
-    File = /var/lib/couchdb/
+    File = /var/lib/rethinkdb/
   }
 } 
 
