--- a/nw/srv/client-conf/client.sd.conf
+++ b/nw/srv/client-conf/client.sd.conf
@@ -1,7 +1,7 @@
 Device {
 Name = db-bak
 Media Type = File
-Archive Device = /media/db/db-bak
+Archive Device = /media/db
 LabelMedia = yes;
 Random Access = Yes;
 AutomaticMount = yes;
